# NanoBase

./: CMakeLists.txt  architecture.md
src/: CMakeLists.txt  Database.cpp  Database.h  FileStorage.cpp  FileStorage.h  JsonEngine.cpp  JsonEngine.h  Serialization.h  Serializer.h  Storage.h  Types.h  main.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  database_test.cpp  filestorage_test.cpp  jsonengine_test.cpp  serializer_test.cpp
